--- a/src/main/resources/es/nivel36/laie/i18n_es_ES.properties
+++ b/src/main/resources/es/nivel36/laie/i18n_es_ES.properties
@@ -46,7 +46,6 @@ address.street_name 				= Calle
 address.storey 						= Planta
 address.zip_code 					= Código postal
 
-
 #User
 user.avatar							= Imagen
 user.date_of_join					= Fecha de incorporación
@@ -71,8 +70,14 @@ user.owner							= Propietario
 user.last_actions					= Últimas acciones
 user.phone_number 					= Teléfono
 user.picture						= Foto
-
 user.password						= Contraseña
 user.repeat_password				= Repetir contraseña
 user.send_welcome_email				= Enviar correo de bienvenida
+
+login.username						= Nombre de usuario
+login.password						= Contraseña
+login.rememberme					= Recuerdame
+login.forget_password				= Olvidé mi contraseña
+login.enter							= Aceptar
+login.login							= Acceso
 
