--- a/src/main/resources/es/nivel36/laie/i18n_es_ES.properties
+++ b/src/main/resources/es/nivel36/laie/i18n_es_ES.properties
@@ -46,6 +46,8 @@ address.street_name 				= Calle
 address.storey 						= Planta
 address.zip_code 					= Código postal
 
+laie.time_management				= Gestión de horarios - \u00a9 Nivel 36
+
 #User
 user.avatar							= Imagen
 user.date_of_join					= Fecha de incorporación
