--- a/src/main/resources/es/nivel36/laie/i18n_es_ES.properties
+++ b/src/main/resources/es/nivel36/laie/i18n_es_ES.properties
@@ -82,4 +82,11 @@ login.rememberme					= Recuerdame
 login.forget_password				= Olvidé mi contraseña
 login.enter							= Aceptar
 login.login							= Acceso
+login.logout							= Salir
+
+index.title							= Página principal
+
+role.ADMIN							= Administrador
+role.HHRR							= Recursos humanos
+role.USER							= Usuario
 
