--- a/src/main/resources/es/nivel36/laie/i18n_es_ES.properties
+++ b/src/main/resources/es/nivel36/laie/i18n_es_ES.properties
@@ -48,6 +48,8 @@ address.zip_code 					= Código postal
 
 laie.time_management				= Gestión de horarios - \u00a9 Nivel 36
 
+menu.users							= Usuarios
+
 #User
 user.avatar							= Imagen
 user.date_of_join					= Fecha de incorporación
@@ -75,6 +77,9 @@ user.picture						= Foto
 user.password						= Contraseña
 user.repeat_password				= Repetir contraseña
 user.send_welcome_email				= Enviar correo de bienvenida
+
+users.users							= Usuarios
+users.import						= Importar
 
 login.username						= Nombre de usuario
 login.password						= Contraseña
