--- a/src/main/resources/es/nivel36/laie/i18n_es_ES.properties
+++ b/src/main/resources/es/nivel36/laie/i18n_es_ES.properties
@@ -46,6 +46,12 @@ address.street_name 				= Calle
 address.storey 						= Planta
 address.zip_code 					= Código postal
 
+#Config
+config.config						= Configuración
+config.change_password				= Cambiar contraseña
+config.change_avatar				= Cambiar imagen
+config.language						= Idioma
+
 laie.time_management				= Gestión de horarios - \u00a9 Nivel 36
 
 menu.users							= Usuarios
