--- a/src/main/resources/es/nivel36/laie/i18n_es_ES.properties
+++ b/src/main/resources/es/nivel36/laie/i18n_es_ES.properties
@@ -83,9 +83,15 @@ user.picture						= Foto
 user.password						= Contraseña
 user.repeat_password				= Repetir contraseña
 user.send_welcome_email				= Enviar correo de bienvenida
+user.error.duplicate_email			= El correo electrónico ya está asignado a otro usuario
+user.error.duplicate_id				= El id de usuario ya está asignado a otro usuario
+user.error.title.manager_error		= Error
+user.error.invalid_manager			= El usuario {1} no puede ser responsable de {2}
+user.error.user_is_manager			= El usuario {2} es responsable de {1}, por lo que {1} no puede ser su responsable.
 
 users.users							= Usuarios
 users.import						= Importar
+users.new_user						= Nuebo usuario
 
 login.username						= Nombre de usuario
 login.password						= Contraseña
