First user's edit screen

--- a/src/main/resources/es/nivel36/laie/i18n_es_ES.properties
+++ b/src/main/resources/es/nivel36/laie/i18n_es_ES.properties
@@ -82,6 +82,7 @@ user.phone_number 					= Teléfono
 user.picture						= Foto
 user.password						= Contraseña
 user.repeat_password				= Repetir contraseña
+user.job_position					= Categoría
 user.send_welcome_email				= Enviar correo de bienvenida
 user.error.duplicate_email			= El correo electrónico ya está asignado a otro usuario
 user.error.duplicate_id				= El id de usuario ya está asignado a otro usuario
